# nhl-scrabble

./: .cliff.toml  .codecov.yml  .codespell-ignore-words.txt  .dockerignore  .gitignore  .gitlint  .linkcheckerrc  .pre-commit-ci.yaml  .pre-commit-config.yaml  .python-version  .safety-policy.yml  .vulture_allowlist  .yamllint  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM-DOCKER-IMAGE-SUMMARY.md  DOCKER-IMAGE-APPROACH.md  LICENSE  LICENSES.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  sync-report.md  tox.ini
.benchmarks/Linux-CPython-3.10-64bit/: 0001_baseline.json  0002_latest.json  0003_latest.json  0004_latest.json  0005_latest.json  0006_latest.json
.claude/: scheduled_tasks.json  settings.json
.claude/commands/: analyze-project.md  create-new-custom-command.md  create-task.md  fix-security-finding.md  implement-task.md  optimize.md  security-review.md  sync-tasks.md  test-optional-dependencies.md  update-docs.md  validate-pre-commit-hook.md
.docker/: Dockerfile
.git-hooks/: check-branch-protection.py  check-branch-protection.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependency-review.yml  docker-playwright.yml  docs.yml  link-check.yml  link-checker.yml  package.yml  publish.yml  qa-automation.yml  sbom.yml  security.yml  stale.yml  visual-regression.yml  welcome.yml
.pre-commit-hooks/: check-version-consistency.py
assets/: BRANDING_SETUP_COMPLETE.md  DESIGN_BRIEF.md
assets/branding/: README.md
docs/: .gitignore  BRANCH_PROTECTION.md  DEVELOPMENT.md  LINK_REFERENCE.md  MAKEFILE.md  PRECOMMIT-UV.md  RELEASING.md  TOX-UV.md  TOX.md  UV-ECOSYSTEM.md  UV-QUICKREF.md  UV.md  conf.py  index.rst  spelling_wordlist.txt
docs/_static/: custom.css
docs/api/: cli.rst  index.rst  models.rst  nhl-api.rst  processors.rst  reports.rst  scoring.rst
docs/audit/: README.md  documentation-audit-2026-04-23.md
docs/contributing/: cli-standards.md  code-style.md  commit-messages.md  dependency-updates.md  documentation-standards.md  logging-guidelines.md  pre-commit-hooks.md  pull-requests.md  release-process.md  testing-guidelines.md
docs/development/: docker-implementation-summary.md  docker-playwright-image.md  index.rst
docs/explanation/: README.md  architecture.md  how-scrabble-scoring-works.md  index.rst  nhl-api-strategy.md  testing-philosophy.md  web-architecture.md  why-scrabble-scoring.md
docs/getting-started/: index.rst
docs/how-to/: README.md  add-report-type.md  build-documentation.md  configure-api-settings.md  contribute-code.md  customize-output-format.md  debug-api-issues.md  deploy-web-interface.md  export-to-json.md  index.rst  installation.md  migrate-csv-exporter.md  run-benchmarks.md  run-tests.md  security-audits.md  setup-pre-commit-hooks.md  troubleshooting-web.md  use-uv.md  use-web-interface.md
docs/reference/: README.md  cli-generated.md  cli.md  configuration.md  environment-variables.md  index.rst  makefile.md  project-stats.md
docs/testing/: coverage-audit-2026-04-21.md  flaky-tests.md  manual-testing-checklist.md
docs/tutorials/: 01-getting-started.md  02-understanding-output.md  03-first-contribution.md  04-interactive-mode.md  README.md  index.rst  using-the-cli.md
docs/user-guide/: index.rst
examples/: custom_scoring.json
qa/: README.md
qa/api/: README.md
qa/cli/: README.md
qa/sdk/: README.md
qa/tui/: README.md
qa/web/: .gitignore  README.md  __init__.py  conftest.py  playwright_config.py  pyproject.toml  pytest.ini  utilities.py
qa/web/fixtures/: __init__.py
qa/web/pages/: __init__.py  base_page.py  conferences_page.py  divisions_page.py  index_page.py  playoffs_page.py  stats_page.py  teams_page.py
qa/web/scripts/: __init__.py
qa/web/tests/: __init__.py
qa/web/tests/accessibility/: README.md  __init__.py  test_axe_scans.py  test_keyboard_navigation.py  test_wcag_compliance.py
qa/web/tests/functional/: test_data_display.py  test_error_handling.py  test_interactions.py  test_navigation.py  test_smoke.py
qa/web/tests/performance/: README.md  conftest.py  locustfile.py  test_page_load.py  test_response_time.py
qa/web/tests/visual/: README.md  conftest.py  pytest.ini  run_visual_tests.sh  test_component_screenshots.py  test_cross_browser_visual.py  test_page_screenshots.py
scripts/: DOCKER-QUICK-REFERENCE.md  README.md  build-playwright-image  check_bash_deps.py  check_bash_docs.py  check_docs.py  codeql_local.sh  find_functions_without_examples.py  generate_branding.py  generate_cli_docs.py  install_codeql.sh  playwright  pytest-playwright  test_markdown_examples.py  update_dependencies.py  update_licenses.py  validate_task_docs.py
src/nhl_scrabble/: __init__.py  __main__.py  cli.py  config.py  config_validators.py  container.py  dashboard.py  di.py  exceptions.py  filters.py  interfaces.py  logging_config.py  protocols.py  rate_limiter.py  search.py  security.py  validators.py
tasks/: IMPLEMENTATION_SEQUENCE.md  README.md  TASK_ANALYSIS.md  TOOLING_ANALYSIS.md
tasks/bug-fixes/: 001-config-validation.md  001-qa-test-failures.md  002-missing-web-routes.md  002-unused-exception.md  003-session-cleanup.md  004-rate-limiting.md  005-exponential-backoff.md  006-output-validation.md  007-fix-ci-branch-protection.md  008-nhl-api-client-session-cleanup.md  009-verify-caching-enabled-by-default.md  010-fix-output-format-validation-mismatch.md  011-use-platform-cache-directory.md  012-debug-functional-test-failures.md  013-fix-wcag-accessibility-violations.md
tasks/enhancement/: 001-html-output.md  001-progress-bars.md  002-interactive-mode.md  002-link-github-issues.md  002-procida-documentation.md  002-project-logo-branding.md  003-historical-data.md  (+40 more)
templates/: email_report.j2  simple_report.j2  slack_report.j2
tests/: __init__.py  conftest.py  test_docs.py  test_docs_builds.py
tools/: check_docs.py  check_docs.sh  generate_cli_docs.py
(+474 files in other folders)
