[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "nhl-scrabble"
version = "2.0.0"
description = "NHL Roster Scrabble Score Analyzer - Calculate Scrabble scores for NHL player names"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Brandon Perkins", email = "bdperkin@gmail.com" },
]
keywords = [
    "nhl",
    "scrabble",
    "hockey",
    "analytics",
    "sports",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "certifi>=2026.4.22",
    "click>=8.3.3",
    "colorlog>=6.10.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "dicttoxml>=1.7.16",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.27.0",
    "starlette>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.1.0",
    "pytest-rerunfailures>=16.1",
    "pytest-sugar>=1.1.1",
    "pytest-clarity>=1.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.2.3",
    "diff-cover>=10.2.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
]
lint = [
    "ruff>=0.15.11",
    "refurb>=2.3.1",
]
type = [
    "mypy>=1.20.2",
    "types-requests>=2.33.0.20260408",
    "types-PyYAML>=6.0.12.20260408",
    "ty>=0.0.32",
]
security = [
    "pip-audit>=2.10.0",
    "bandit[toml]>=1.7.5",
    "safety>=3.7.0",
    "pip-licenses>=5.5.5",
]
branding = [
    "Pillow>=12.2.0",
    "cairosvg>=2.9.0",
]
export = [
    "openpyxl>=3.1.5",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.10.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-programoutput>=0.19",
    "sphinxcontrib-spelling>=8.0.2",
    "sphinxext-opengraph>=0.13.0",
    "myst-parser>=5.0.0",
    "sphinx-sitemap>=2.9.0",
    "pytest-sphinx>=0.7.1",
    "blacken-docs>=1.20.0",
]
docs-gen = [
    "pdoc>=16.0.0",
]
watch = [
    "pytest-watch",
]
build = [
    "build",
]
publish = [
    "twine>=6.2.0",
]
tox = [
    "tox>=4.53.0",
    "tox-uv>=1.35.1",
]
dev = [
    "nhl-scrabble[test,lint,type,security,docs,export,watch,build,publish,tox]",
    "pre-commit>=4.6.0",
    "check-jsonschema>=0.37.1",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
nhl-scrabble = "nhl_scrabble.cli:cli"

[project.urls]
Homepage = "https://github.com/bdperkin/nhl-scrabble"
Repository = "https://github.com/bdperkin/nhl-scrabble"
Issues = "https://github.com/bdperkin/nhl-scrabble/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "src/nhl_scrabble",
]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E501",
    "W503",
    "E203",
]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:S101",
    "src/nhl_scrabble/api/nhl_client.py:C901",
    "src/nhl_scrabble/api_server/routes/players.py:C901",
    "src/nhl_scrabble/validators.py:C901",
    "src/nhl_scrabble/cli.py:TC003,C901",
    "src/nhl_scrabble/config_validators.py:C901",
    "scripts/update_dependencies.py:C901",
]
max-complexity = 10
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.autoflake]
check = true
in-place = false
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]

[tool.docformatter]
wrap_length = 100
wrap_summaries = 100
wrap_descriptions = 100
black = false
style = "pep257"
make_summary_multi_line = false
close_quotes_on_newline = false
pre_summary_newline = false
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.black]
line-length = 100
target-version = [
    "py312",
]
skip-string-normalization = false
skip-magic-trailing-comma = false
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.tox\n  | \\.venv\n  | venv\n  | build\n  | dist\n  | \\.egg-info\n  | __pycache__\n  | \\.pytest_cache\n  | \\.mypy_cache\n  | \\.ruff_cache\n)/\n"

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "E501",
    "COM812",
    "ISC001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D413",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
    "EM101",
    "EM102",
    "TRY003",
    "TRY300",
    "TRY400",
    "G004",
    "PLR2004",
    "PERF203",
    "ANN401",
    "PLC0206",
    "TC001",
    "PTH123",
    "PERF102",
    "RET504",
    "D203",
    "D213",
    "PYI034",
    "PYI036",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "D104",
]
"tests/**/*.py" = [
    "ARG",
    "S101",
    "PLR2004",
    "ANN",
    "PLC0415",
    "SLF001",
]
"src/nhl_scrabble/cli.py" = [
    "T201",
    "PLC0415",
    "TC003",
    "C901",
]
"src/nhl_scrabble/logging_config.py" = [
    "PLC0415",
    "PERF403",
]
"src/nhl_scrabble/__main__.py" = [
    "T201",
]
"scripts/generate_branding.py" = [
    "T201",
    "PLR0915",
]
"scripts/update_dependencies.py" = [
    "T201",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "S607",
]
"src/nhl_scrabble/api/nhl_client.py" = [
    "C901",
    "PLR0912",
]
"src/nhl_scrabble/api_server/routes/*.py" = [
    "FAST002",
    "TRY301",
    "ERA001",
    "C901",
]
"tests/unit/test_nhl_client.py" = [
    "SLF001",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = [
    "nhl_scrabble",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "nhl_scrabble",
]
src_paths = [
    "src",
    "tests",
]
skip_gitignore = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",  # codespell:ignore THIRDPARTY
    "FIRSTPARTY",
    "LOCALFOLDER",
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".eggs/*",
    ".git/*",
    ".tox/*",
    ".venv/*",
    "venv/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
    "__pycache__/*",
]

[tool.refurb]
enable_all = true
python_version = "3.12"
ignore = []

[tool.ssort]
skip = [
    "tests/fixtures/",
    "migrations/",
]
src_paths = [
    "src/",
    "tests/",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
strict_equality = true
strict_concatenate = true
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
color_output = true
error_summary = true
show_absolute_path = false
namespace_packages = true
explicit_package_bases = false
ignore_missing_imports = true
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "nhl_scrabble.cli",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "nhl_scrabble.web.*",
]
disallow_untyped_decorators = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "nhl_scrabble.api_server.*",
]
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false

[tool.ty.src]
include = [
    "src/",
    "tests/",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]

[tool.ty.terminal]
error-on-warning = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
timeout = 60
timeout_method = "thread"
junit_family = "xunit2"
junit_logging = "all"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-n",
    "auto",
    "--cov=nhl_scrabble",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--timeout=60",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "timeout: Custom timeout for specific tests (e.g., @pytest.mark.timeout(300))",
    "no_parallel: Tests that must run sequentially (e.g., @pytest.mark.no_parallel)",
    "flaky: Flaky test that may fail intermittently (will be retried on failure)",
]

[tool.coverage.run]
source = [
    "src",
]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 80.0
include_paths = [
    "src/",
]
exclude_paths = [
    "tests/",
    "*/__main__.py",
]

[tool.pytest_benchmark]
save = true
save_data = true
compare = "0001"
fail_on_regression = true
regression_threshold = 0.2
storage = ".benchmarks"
columns = [
    "min",
    "max",
    "mean",
    "stddev",
    "median",
    "iqr",
    "outliers",
    "rounds",
    "iterations",
]
histogram = "normal"
warmup = true
warmup_iterations = 5
min_time = 5e-06

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.lock,*.json,*.min.js,*.svg,htmlcov/*,.git/*,.tox/*,.venv/*,*.egg-info/*,build/*,dist/*,.pytest_cache/*,.mypy_cache/*,.ruff_cache/*,docs/reference/api,docs/_build/*"
ignore-words = ".codespell-ignore-words.txt"
count = true
quiet-level = 0

[tool.rstcheck]
report_level = "INFO"
ignore_directives = []
ignore_roles = []
ignore_substitutions = []
ignore_languages = []
ignore_messages = ""

[tool.doc8]
max-line-length = 100
extensions = [
    ".rst",
    ".txt",
]
ignore-path = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
]
ignore = []
verbose = false
file-encoding = "utf-8"

[tool.mdformat]
wrap = 100
number = true
end_of_line = "lf"

[tool.pymarkdown.mode]
strict-config = true

[tool.pymarkdown.plugins]
enabled = [
    "md001",
    "md002",
    "md003",
    "md004",
    "md005",
    "md006",
    "md007",
    "md009",
    "md010",
    "md011",
    "md012",
    "md013",
    "md014",
    "md018",
    "md019",
    "md020",
    "md021",
    "md022",
    "md023",
    "md024",
    "md025",
    "md026",
    "md027",
    "md028",
    "md029",
    "md030",
    "md031",
    "md032",
    "md033",
    "md034",
    "md035",
    "md036",
    "md037",
    "md038",
    "md039",
    "md040",
    "md041",
    "md042",
    "md043",
    "md044",
    "md045",
    "md046",
    "md047",
    "md048",
    "md049",
    "md050",
    "md051",
    "md052",
    "md053",
]
disabled = []

[tool.pymarkdown.plugins.md010]
enabled = false

[tool.pymarkdown.plugins.md012]
enabled = true

[tool.pymarkdown.plugins.md029]
enabled = false

[tool.pymarkdown.plugins.md013]
enabled = false

[tool.pymarkdown.plugins.md022]
enabled = false

[tool.pymarkdown.plugins.md024]
enabled = false

[tool.pymarkdown.plugins.md031]
enabled = false

[tool.pymarkdown.plugins.md032]
enabled = false

[tool.pymarkdown.plugins.md033]
enabled = false

[tool.pymarkdown.plugins.md034]
enabled = false

[tool.pymarkdown.plugins.md036]
enabled = false

[tool.pymarkdown.plugins.md040]
enabled = false

[tool.pymarkdown.plugins.md041]
enabled = false

[tool.pymarkdown.plugins.md043]
enabled = false

[tool.uv]
managed = true
package = true
compile-bytecode = true
link-mode = "copy"
resolution = "highest"
constraint-dependencies = []
override-dependencies = []
index-strategy = "first-index"
keyring-provider = "disabled"
cache-keys = []
python-preference = "managed"
preview = false

[tool.uv.sources]

[tool.interrogate]
fail-under = 100.0
verbose = 2
quiet = false
color = true
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-overloaded-functions = false
ignore-private = false
ignore-semiprivate = false
ignore-property-decorators = false
ignore-setters = false
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "tests",
    ".scratch",
]
ext = []
style = "sphinx"
omit-covered-files = false

[tool.deptry]
exclude = [
    "\\.git",
    "\\.tox",
    "\\.venv",
    "venv",
    "build",
    "dist",
    ".*\\.egg-info",
    "__pycache__",
    "tests",
    "scripts",
    "qa",
]
optional_dependencies_dev_groups = [
    "test",
    "lint",
    "type",
    "security",
    "docs",
    "docs-gen",
    "watch",
    "build",
    "publish",
    "tox",
    "dev",
    "branding",
]
ignore = []

[tool.deptry.per_rule_ignores]

[tool.deptry.package_module_name_map]
python-dotenv = "dotenv"
pyyaml = "yaml"

[tool.unimport]
exclude = "\\.git|\\.tox|\\.venv|venv|build|dist|.*\\.egg-info|__pycache__"
ignore_init = true
include_star_import = false
gitignore = true

[tool.pydocstyle]
convention = "pep257"
match = ".*\\.py"
match_dir = "[^\\.].*"
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D213",
    "D413",
]

[tool.vulture]
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]
ignore_decorators = [
    "@*.command",
    "@*.group",
    "@*.option",
    "@*.argument",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@app.route",
    "@app.get",
    "@app.post",
    "@app.put",
    "@app.patch",
    "@app.delete",
    "@*.register",
    "@property",
    "@*.setter",
    "@*.getter",
    "@staticmethod",
    "@classmethod",
    "@abstractmethod",
]
ignore_names = [
    "exc_*",
    "format",
    "NHLApiNotFoundError",
    "track_score_calculation",
    "track_report_generation",
    "track_api_fetching",
    "ReportGenerator",
    "get_report",
    "validate_safe_path",
    "validate_url",
    "validate_float_range",
    "validate_output_format",
    "reset",
    "health",
    "root",
    "favicon",
    "dispatch",
    "templates",
    "get_players",
    "get_standings",
    "get_team",
    "get_teams",
    "test_*",
    "fixture_*",
    "*_fixture",
    "args",
    "kwargs",
    "_*",
]
min_confidence = 60

[tool.bandit]
targets = [
    "src",
]
exclude_dirs = [
    "tests",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
severity = "LOW"
confidence = "LOW"
skips = [
    "B101",
    "B311",
]
exclude_tests = []

[tool.check-wheel-contents]
toplevel = [
    "nhl_scrabble",
]
ignore = [
    "W002",
]
